<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLabelName"
        style="@style/TextViewTheme"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:text="@string/label_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabelEmail"
        style="@style/TextViewTheme"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/label_email"
        app:layout_constraintEnd_toEndOf="@+id/textLabelName"
        app:layout_constraintTop_toBottomOf="@+id/textLabelName" />

    <TextView
        android:id="@+id/textLabelPassword"
        style="@style/TextViewTheme"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/label_password"
        app:layout_constraintEnd_toEndOf="@+id/textLabelEmail"
        app:layout_constraintTop_toBottomOf="@+id/textLabelEmail" />

    <TextView
        android:id="@+id/textLabelConfirm"
        style="@style/TextViewTheme"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/label_confirm"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/textLabelPassword"
        app:layout_constraintTop_toBottomOf="@+id/textLabelPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <EditText
        android:id="@+id/editName"
        style="@style/EditTextTheme"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelName"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toTopOf="@+id/textLabelName" />

    <EditText
        android:id="@+id/editConfirm"
        style="@style/EditTextTheme"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textLabelConfirm"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/EditTextTheme"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelPassword"
        app:layout_constraintStart_toStartOf="@+id/editConfirm"
        app:layout_constraintTop_toTopOf="@+id/textLabelPassword" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/EditTextTheme"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelEmail"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="@+id/textLabelEmail" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/dp_330"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/shape"
        android:text="@string/title_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirm" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_12"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/title_ready_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
